--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="web-root/css/resetCSS.css"/>
+    <link rel="stylesheet" href="web-root/css/style.css"/>
+    <title>Tema 4</title>
 </head>
 <body>
-    
+    <header>
+        <img class="logo" src="./web-root/img/LogotipoDavid.jpg"/>
+        <h1>Index Tema 4</h1>
+    </header>
+    <main>
+        <a class="boton" href="./codigo/Practica012DavidVicente/index.php">Practica 12</a>
+        <a class="boton" href="./codigo/Practica013DavidVicente/index.php">Practica 13</a>
+        <a class="boton" href="codigo/Ejercicio3/codigo/ejercicio3.php?lado=4">Ejemplo Conexion PHP</a>
+        <a class="boton" href="codigo/Ejercicio4/codigo/Ejercicio4.php?precio=6.33&pago=10">Ejemplo PDO</a>
+    </main>
+    <footer>
+        <p>Footer de David</p>
+        <a href="../index.html"><img src="./web-root/img/volver.png" height="20px"></a>
+    </footer>
 </body>
 </html>
