--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
         <a class="boton" href="./codigo/Practica012DavidVicente/index.php">Practica 12</a>
         <a class="boton" href="./codigo/Practica013DavidVicente/index.php">Practica 13</a>
-        <a class="boton" href="codigo/Ejercicio3/codigo/ejercicio3.php?lado=4">Ejemplo Conexion PHP</a>
-        <a class="boton" href="codigo/Ejercicio4/codigo/Ejercicio4.php?precio=6.33&pago=10">Ejemplo PDO</a>
+        <a class="boton" href="codigo/ConexionPHP.php">Ejemplo Conexion PHP</a>
+        <a class="boton" href="codigo/pdo/conexion.php">Ejemplo PDO</a>
     </main>
     <footer>
         <p>Footer de David</p>
