--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="web-root/css/resetCSS.css"/>
     <link rel="stylesheet" href="web-root/css/style.css"/>
     <title>Tema 4</title>
+    <style>
+        .boton1
+       {
+           -webkit-transition: 1s ease-in-out;
+           transition: 1s ease-in-out;
+       }
+       .boton1:hover
+       {
+           background-color: #9c102c;
+           -webkit-transform: scale(.85);
+           transform: scale(.85);
+       }
+   </style>
 </head>
 <body>
     <header>
@@ -14,10 +27,10 @@
         <h1>Index Tema 4</h1>
     </header>
     <main>
-        <a class="boton" href="./codigo/Practica012DavidVicente/index.php">Practica 12</a>
-        <a class="boton" href="./codigo/Practica013DavidVicente/index.php">Practica 13</a>
-        <a class="boton" href="codigo/ConexionPHP.php">Ejemplo Conexion PHP</a>
-        <a class="boton" href="codigo/pdo/conexion.php">Ejemplo PDO</a>
+        <a class="boton boton1" href="./codigo/Practica012DavidVicente/index.php">Practica 12</a>
+        <a class="boton boton1" href="./codigo/Practica013DavidVicente/index.php">Practica 13</a>
+        <a class="boton boton1" href="codigo/ConexionPHP.php">Ejemplo Conexion PHP</a>
+        <a class="boton boton1" href="codigo/pdo/conexion.php">Ejemplo PDO</a>
     </main>
     <footer>
         <p>Footer de David</p>
